[package]
name = "m3u8-downloader"
version = "0.1.0"
authors = ["Bachue Zhou <bachue.shu@gmail.com>"]
edition = "2018"

[dependencies]
m3u8-rs = "1.0.7"
tokio = { version = "0.2.22", features = ["macros", "fs", "io-util", "blocking"] }
futures = "0.3.5"
reqwest = { version = "0.10.7", features = ["socks"] }
once_cell = "1.4.0"
url = "2.1.1"
anyhow = "1.0.32"
